fix: 자동차 입력 받는 메서드에서 이름 길이 예외처리 추가